Adding Virtual Threads support but deactivated by default.